--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       id: composer-cache
       run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
-    - name: Cache composer dependencies
+    - name: Cache Composer dependencies
       uses: actions/cache@v1
       with:
         path: ${{ steps.composer-cache.outputs.dir }}
@@ -40,8 +40,8 @@ jobs:
       run: |
         vendor/bin/tongs
 
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v2
+    - name: Deploy to GitHub Pages
+      uses: docker://peaceiris/gh-pages:v2
       env:
         # ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
