--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require-dev": {
-    "datashaman/tongs": "@dev",
+    "datashaman/tongs": "1.*.*",
     "datashaman/tongs-feed": "@dev",
     "datashaman/tongs-metadata": "@dev",
     "datashaman/tongs-more": "@dev",
