--- a/composer.json
+++ b/composer.json
@@ -68,11 +68,13 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require-dev": {
-    "datashaman/tongs": "@dev",
-    "datashaman/tongs-feed": "@dev",
-    "datashaman/tongs-metadata": "@dev",
-    "datashaman/tongs-more": "@dev",
-    "datashaman/tongs-permalinks": "@dev",
-    "datashaman/tongs-sass": "@dev"
+  },
+  "require": {
+    "datashaman/tongs": "1.*.*",
+    "datashaman/tongs-feed": "1.*.*",
+    "datashaman/tongs-metadata": "1.*.*",
+    "datashaman/tongs-more": "1.*.*",
+    "datashaman/tongs-permalinks": "1.*.*",
+    "datashaman/tongs-sass": "1.*.*"
   }
 }
